# CT3

./: .gitignore  1234  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
choco/: ast_visitor.py  check_assign_target.py  choco_ast_to_choco_flat.py  choco_flat_introduce_library_calls.py  choco_flat_to_riscv_ssa.py  constant_folding.py  dead_code_elimination.py  for_to_while.py  lexer.py  name_analysis.py  parser.py  type_checking.py  warn_dead_code.py
choco/dialects/: choco_ast.py  choco_flat.py  choco_type.py
riscv/: dialect.py  function_lowering.py  lexer.py  parser.py  printer.py  register_allocation.py  ssa_dialect.py
tests/: lit.cfg
tests/check-assign-target/: addition.mlir
tests/choco_ast_to_choco_flat/: assign.mlir  call.mlir  exprStmt.mlir  global_var_bin_op.mlir  list-of-string.mlir  list_concat_diff_type.mlir
tests/choco_flat/: call.mlir  func.mlir  memory.mlir
tests/choco_flat_introduce_library_calls/: print_bool.mlir  print_int.mlir
tests/end-to-end/: pass.choc  print-integer-literal.choc
tests/for-to-while/: list-for-loop.choc  list-while-loop.choc  string-for-loop.choc
tests/lexer/: arithmetic.choc  brackets.choc  division.choc  end_with_comment.choc  eq.choc  func_def_double.choc  func_def_func_def_func_def_pass.choc  func_prototype_1.choc  ge.choc  global_def_single.choc  gt.choc  if_elif_else.choc  is.choc  le.choc  literals.choc  logical_ops.choc  lt.choc  (+15 more)
tools/: choco_lexer.py  choco_opt.py  riscv_interpreter.py  riscv_lexer.py
util/: list_ops.py
(+320 files in other folders)
